Fix hero overlap by using precise header offset

--- a/assets/stylesheets/home.scss
+++ b/assets/stylesheets/home.scss
@@ -52,7 +52,6 @@ section:not(.hero) {
 
 section.hero {
     position: relative;
-    margin-top: -12px;
     .custom-shape-divider-bottom-1771153755, .custom-shape-divider-bottom-1771153943{
         display: none;
         z-index: 89;
